fix: Handling the text overflow beyond the container

--- a/src/components/Statistics/dashboardBoxCharts.css
+++ b/src/components/Statistics/dashboardBoxCharts.css
@@ -139,6 +139,12 @@
    flex: 1;
    display: flex;
    flex-direction: row;
+   position: relative;
+   padding: 0 1rem;
+}
+
+.large-box-chart-title {
+   position: relative;
 }
 
 .large-box-chart-content {
